mac: Fix calulation for resident size of a process.

The previous implementation of GetWorkingSetSize used
task_info(TASK_BASIC_INFO_64), which returns the number of resident pages in the
pmap for the vm subsystem for the process. This fails to correctly account for
resident pages of copy-on-write and shared memory memory regions, as the pages
might be mapped by the pmap for another process.

In passing, this CL fixes a typo in process_metrics_memory_dump_provider.cc,
which used defined(MACOSX) instead of defined(OS_MACOSX).

BUG=700532, 693263

Review-Url: https://codereview.chromium.org/2740423002
Cr-Commit-Position: refs/heads/master@{#456514}

Former-commit-id: 56722415bddf6b1eb88f6e7fb9e9d4df7f21b9a1